# hydrazine

./: CODE_OF_CONDUCT.MD  README.md  package.json  tailwind.config.js
coverage/: cmake.js
coverage/misc/: class.js  classes.html
discord/: package.json  tsconfig.json
discord/database/: main.db
discord/engine/: hydrazine.json
discord/module/: actBaseActions.ts  database.ts  discordClientActions.ts  formatConsoleLog.ts  formatMessage.ts  handleMessage.ts
discord/output/module/: actBaseActions.js  formatMessage.js
discord/output/src/: index.js
discord/output/template/: template.js
discord/sql/: hydro_users.sql
discord/src/: client.ts  index.ts
discord/template/: template.ts
docs/: HOW_TO_RUN.MD  README.MD  SAVE_LOCAL.MD  TEMPLATE.MD  VARIABLES.MD
public/: classes.html  index.html
src/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  presence.rs
src/compiler/: buildActions.ts  garbageCollector.ts  main.js  main.ts
src/components/: Blocks.js  Blocks.tsx  ConnectionLine.js  ConnectionLine.tsx  Header.js  Header.tsx  RightPane.js
src/module/: database.js  database.ts  export_file.ts  export_zip.ts  main.js  main.ts
src/page/: Builder.js  Builder.tsx
src/scss/: flow.scss  index.scss  tailwinds.scss
src/types/: index.ts
